<resources>
    <string name="app_name">Baraka Travel</string>
    <string name="invalid_email">Email must be like this \"example@example.example\"</string>
    <string name="invalid_phone1">Phone number Must be enter 8 or 10 Numbers that after +1 and </string>
    <string name="invalid_phone3">Phone number Must be enter +1 then 8 or 10 Numbers that after +1</string>
    <string name="invalid_phone2"> number</string>
    <string name="invalid_confirm_password">Confirm password not match</string>
    <string name="title_account">Account</string>
    <string name="hotels">Hotels</string>
    <string name="flight">Flights</string>
    <string name="hajj">Hajj</string>
    <string name="goto_hajj">Change To Hajj</string>
    <string name="discover">Discover</string>
    <string name="good_price_in_every_package1">Good Price On  Every Package</string>
    <string name="un_beatable_experience">Unbeatable Experience</string>
    <string name="no_hidden_charge">No Hidden Charge</string>
    <string name="customer_care_24">24/7 Customer Care Support</string>
    <string name="begin">begin</string>
    <string name="signUp2">Sign Up</string>
    <string name="enter_email">Email</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="show">Show</string>
    <string name="subbmitText">I would like to receive your newsletter and other promotional information from Baraka USA</string>
    <string name="login">Login</string>
    <string name="forgetpass">Forgot your Password ?</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="load_more">Load More</string>
    <string name="from">From Location</string>
    <string name="to">To Location</string>
    <string name="top_hotels_packages">Top Hotels Packages</string>
    <string name="night">/Night</string>
    <string name="my_account">My Account</string>
    <string name="manage_bookings">Manage Bookings</string>
    <string name="top_flight_offers">Top Flight Offers</string>
    <string name="top_umrah_packages">Top Umrah Packages</string>
    <string name="about_baraka_uSA">About Us</string>
    <string name="login_out">LogOut</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="lik_us_rate_our_app">Like us? Rate our app</string>
    <string name="edit_your_Info">Edit your Info.</string>
    <string name="phone">Phone</string>
    <string name="change_password">Change Password</string>
    <string name="payment_and_transactions">Payment and transactions</string>
    <string name="Save_Changes">Save Changes</string>
    <string name="add_new_card">Add New Card</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="enter_CVV">Enter CVV</string>
    <string name="your_transactions_are_secure">Your transactions are 100% secure</string>
    <string name="Pay_2718">Pay $ 2718</string>
    <string name="get_e_visa">Get E-Visa</string>
    <string name="help_to_get_visa">Let us help you get your e-Visa.</string>
    <string name="Passport_Photo">Passport Photo</string>
    <string name="Personal_Photo">Personal Photo</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="duration">Duration</string>
    <string name="makkah">Makkah</string>
    <string name="madinah">Madinah</string>
    <string name="makamadinah">Makkah And Madinah</string>
    <string name="category">Category</string>
    <string name="adults">Adults</string>
    <string name="Rooms">Rooms</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms1">Amet leo, commodo semper pharetra, at eu. Penatibus phasellus habitant ut nibh at. In cursus proin amet, tincidunt facilisis arcu, maecenas ultrices. Proin cursus scelerisque egestas venenatis quisque phasellus a at non. Sit mattis orci at at commodo.</string>
    <string name="What_not_included">What’s not included</string>
    <string name="not_include">Amet leo, commodo semper pharetra, at eu. Penatibus phasellus habitant ut nibh at. In cursus proin amet, tincidunt facilisis arcu, maecenas ultrices. Proin cursus scelerisque egestas venenatis quisque phasellus a at non. Sit mattis orci at at commodo.</string>
    <string name="Confirm_Pay"><![CDATA[Confirm & Pay]]></string>
    <string name="successful_payment">Successful Payment</string>
    <string name="your_booking_is_confirmed">Your Booking is confirmed</string>
    <string name="find_booking_details">Find your booking details in your profile under Booking section</string>
    <string name="view_my_bookings">View My Bookings</string>
    <string name="return_home">Return Home</string>
    <string name="my_umrah_bookings">My Umrah Bookings</string>
    <string name="up_coming">UpComing</string>
    <string name="completed">Completed</string>
    <string name="add_new_payment_method">Add new payment method</string>
    <string name="package_requests">Package Requests</string>
    <string name="I_want_to_make_change">I want to make a change</string>
    <string name="Request_a_refund">Request a refund</string>
    <string name="madinah_movenpick_hotel">Madinah Movenpick Hotel</string>
    <string name="confirm_with_the_support">Confirm with the support!</string>
    <string name="booking_almost_done">Booking almost done!</string>
    <string name="our_custom_support">Our customer support will call you shortly to confirm your booking and payment details</string>
    <string name="select_number">Select Number</string>
    <string name="child">Child</string>
    <string name="Save">Save</string>
    <string name="flight_details">Flight Details</string>
    <string name="fly_out">Fly out</string>
    <string name="fly_back">Fly back</string>
    <string name="package_details">Package Details</string>
    <string name="package_divided">The package is divided into 6 Days each in Makah and Medina with visa facility. Get benefit from our specially designed personalized packages keeping in view the time, weather and budget because our customer convenience is our priority.</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Transport">Transport</string>
    <string name="Visa">Visa</string>
    <string name="Buffet">Buffet</string>
    <string name="Included">Included</string>
    <string name="your_airline">Your Airline</string>
    <string name="airline_offer">Baraka Travel airline partner offering competitive prices from the U.S. to Saudi Arabia in particular.</string>
    <string name="your_stay_in_mekkah">Your stay in Mekkah</string>
    <string name="distance_details_makah">Accommodation not far away from Makah museum, Muzdalifah and Jabal Thawr.I t has only 20 minute of walk from Makah. The Building is 750 meters away from the Abraj Al Bait Mall, Black stone and Zam Zam well</string>
    <string name="free_wifi">Free Wifi</string>
    <string name="central_air_conditioning">Central Air Conditioning</string>
    <string name="handicap_accessible">Handicap Accessible</string>
    <string name="your_stay_in_madinah">Your stay in Madinah</string>
    <string name="distance_details_madinah">This luxury hotel is within a 10-minute walk of  Prodigious Mosque of Makakh. Safa and Marwah and Abraj Al-Bait Towers are also within 3 to 5 km within walking distance of the Al Masjid Al Haram, it also proposals a 24-hour shuttle service</string>
    <string name="Your_map_view">Your Map view</string>
    <string name="Book">Book</string>
    <string name="class1">Class</string>
    <string name="my_cards">My Cards</string>
    <string name="Transactions">Transactions</string>
    <string name="top_hajj_packages">Top Hajj Packages</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="wait">Please wait....</string>
    <string name="error">Something went wrong try agian</string>
    <string name="error_inter_net">No internet connection Please check your internet and try again later</string>
    <string name="empty">Please Enter and Complete your Data First</string>
    <string name="invalid_password">Password Must be more than 7 of Chars and Numbers</string>
    <string name="invalid_user_name">Username Must be more than 2 Chars</string>
    <string name="invalid_first_name">First Name Must be more than 2 Chars</string>
    <string name="invalid_last_name">Last Name Must be more than 2 Chars</string>
    <string name="invalid_message">Message Must be more than 2 Chars</string>
    <string name="invalid_required_field">Field Required</string>
    <string name="invalid_address_required_field">Address Field Required</string>
    <string name="invalid_email_required_field">Email Field Required</string>
    <string name="invalid_traveling_from_required_field">Traveling From Field Required</string>
    <string name="invalid_zip_required_field">Zip Code Field Required</string>
    <string name="invalid_comment_required_field">Write Comment Field Required</string>
    <string name="invalid_check_num_required_field">Check Number Field Required</string>
    <string name="invalid_paid_field">Paid Field Required</string>
    <string name="invalid_correct_paid_field">Please Paid Must be from zero to Package Price</string>
    <string name="umrah">Umrah</string>
    <string name="goto_umrah">Change To Umrah</string>
    <string name="hajj_and_umrah"><![CDATA[Hajj & Umrah]]></string>
    <string name="invalid_search">Search keyword Must be more than 2 Chars</string>
    <string name="invalid_search2">Please Enter any Data to can Search </string>
    <string name="price">Price</string>
    <string name="discription">Description</string>
    <string name="manasik">Manasik</string>
    <string name="air">Air</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="location">Location</string>
    <string name="day_by_day_itinerary">Day By Day Itinerary</string>
    <string name="Packages_included">Packages Included</string>
    <string name="additional_info">Additional Info</string>
    <string name="how_to_book">How To Book ?</string>
    <string name="important_notes">Important Notes</string>
    <string name="not_included">Not Included</string>
    <string name="included">Included</string>
    <string name="pricing">Pricing</string>
    <string name="write_your_rating_here">WRITE YOUR RATING HERE</string>
    <string name="send_inquiry">Send Inquiry</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Message</string>
    <string name="select_image">Please Select your Photos First</string>
    <string name="gender">Gender</string>
    <string name="your_first_name_as_passport">Your First Name As Passport</string>
    <string name="your_last_name_as_passport">Your Last Name As Passport</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="where_are_you_traveling_from">Where Are You Traveling From ?</string>
    <string name="please_write_comment_if_you_need">Please write comment if you need</string>
    <string name="are_you_traveling_alone">Are You Traveling Alone ?</string>
    <string name="subbmit">Submit</string>
    <string name="choose_passport_image">Choose Passport Image</string>
    <string name="choose_personal_image">Choose Personal Image</string>
    <string name="bngiladish_Passport">Bangladeshi Passport</string>
    <string name="bngladish_price">$300/- Per Passport</string>
    <string name="bngladish_year_validaty">30 Days Validity – One Time Entry - Stay up-to 30 Days.</string>
    <string name="bngladish_visa_time">Visa processing time : 10 Days.</string>
</resources>