<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_59sdp"
                android:layout_height="@dimen/_23sdp"
                android:layout_gravity="center"
                android:elevation="@dimen/_1sdp"
                android:scaleType="centerCrop"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/LoginAndSignUpTextView"
                android:text="@string/login"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fragment_login_for_sign_up_tv"
                app:layout_constraintStart_toEndOf="@+id/logo"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/fragment_login_for_sign_up_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LoginAndSignUpBlueTextView"
                android:text="@string/signUp2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_login_for_til_email"
            style="@style/text_input_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:errorTextAppearance="@style/error_appearance"
            android:layout_marginTop="@dimen/_12sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_login_for_email_etxt"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_email"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_login_for_til_password"
                style="@style/text_input_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                app:errorTextAppearance="@style/error_appearance"
                android:layout_marginTop="@dimen/_12sdp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_login_for_password_etxt"
                    style="@style/EditTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/fragment_login_sign_up_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LoginAndSignUpBlueTextView"
                android:text="@string/show"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_gravity="right"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/fragment_login_for_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_btn_blue_shape"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_105sdp"
            android:text="@string/login" />
        <TextView
            android:id="@+id/fragment_login_forget_password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:text="@string/forgetpass"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12ssp"
            />
    </LinearLayout>
</ScrollView>