<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_35sdp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_59sdp"
                android:layout_height="@dimen/_23sdp"
                android:layout_gravity="center"
                android:elevation="@dimen/_1sdp"
                android:scaleType="centerCrop"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/LoginAndSignUpTextView"
                android:text="@string/signUp2"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fragment_sign_up_tv"
                app:layout_constraintStart_toEndOf="@+id/logo"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/fragment_sign_up_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LoginAndSignUpBlueTextView"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_sign_up_til_first_name"
            style="@style/text_input_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:errorTextAppearance="@style/error_appearance"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_sign_up_efirst_name_etxt"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/first_name"
                android:ems="10"
                android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_sign_up_til_last_name"
            style="@style/text_input_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:errorTextAppearance="@style/error_appearance"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rfragment_sign_up_elast_name_etxt"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/last_name"
                android:ems="10"
                android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_27sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:elevation="@dimen/_6sdp"
            style="@style/EditTextLogin"
            android:textColor="@color/blue"
            android:text="+1"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_sign_up_til_phone"
            style="@style/text_input_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:paddingStart="@dimen/_25sdp"
            android:paddingTop="@dimen/_1sdp"
            app:errorTextAppearance="@style/error_appearance"
            android:layout_marginTop="@dimen/_12sdp"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_sign_up_phone_etxt"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                />
        </com.google.android.material.textfield.TextInputLayout>
        </FrameLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_sign_up_til_email"
            style="@style/text_input_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:errorTextAppearance="@style/error_appearance"
            android:layout_marginTop="@dimen/_12sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_sign_up_email_etxt"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_email"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_sign_up_til_password"
                style="@style/text_input_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                app:errorTextAppearance="@style/error_appearance"
                android:layout_marginTop="@dimen/_12sdp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_sign_up_password_etxt"
                    style="@style/EditTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>


<!--                <TextView-->
<!--                    android:id="@+id/fragment_login_sign_up_tv2"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    style="@style/LoginAndSignUpBlueTextView"-->
<!--                    android:text="@string/show"-->
<!--                    android:visibility="gone"-->
<!--                    android:layout_marginTop="@dimen/_15sdp"-->
<!--                    android:layout_gravity="right"-->
<!--                    android:layout_marginStart="@dimen/_30sdp"-->
<!--                    android:layout_marginEnd="@dimen/_30sdp"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_sign_up_til_confirm_password"
            style="@style/text_input_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:errorTextAppearance="@style/error_appearance"
            android:layout_marginTop="@dimen/_12sdp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_sign_up_confirm_password_etxt"
                style="@style/EditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:id="@+id/fragment_sign_up_cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/subbmitText"
            android:buttonTint="@color/blue"
            android:textColor="@color/gray_submit_check"
            android:textSize="@dimen/_11ssp"
            android:textStyle="normal" />
        <Button
            android:id="@+id/fragment_sign_up_btn_begin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_btn_blue_shape"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_67sdp"
            android:text="@string/signUp2" />

    </LinearLayout>
</ScrollView>